--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         <activity android:name=".AccountActivity" />
         <activity android:name=".CreateListActivity" />
         <activity android:name=".MessageActivity" />
-        <activity android:name=".homepage.MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
