--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,5 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'org.jetbrains:annotations-java5:15.0'
 
-
+    implementation 'androidx.appcompat:appcompat:1.0.0'
 }
