--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         <activity android:name=".AccountActivity" />
         <activity android:name=".CreateListActivity" />
         <activity android:name=".MessageActivity" />
-        <activity android:name=".ModifyListActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".ModifyListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
