--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,11 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    configurations {
+        compile.exclude group: "junit", module: "junit"
+    }
+
+
     buildTypes {
         release {
             minifyEnabled false
@@ -24,8 +29,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -33,14 +37,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
-
     //glide
     implementation 'com.github.bumptech.glide:glide:4.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
-
     //circle imageview
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'org.jetbrains:annotations-java5:15.0'
-
     implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation files('libs/json-20160212.jar')
+    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 }
