--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".LoginActivity"></activity>
         <activity android:name=".SearchActivity" />
         <activity android:name=".AccountActivity" />
         <activity android:name=".CreateListActivity" />
         <activity android:name=".MessageActivity" />
-        <activity android:name=".ModifyListActivity"/>
+        <activity android:name=".ModifyListActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
